<resources>
    <string name="know_characters_sub">Know Your Characters</string>
    <string name="know_characters_p1">In order to write really strong, compelling characters, you first need to know them inside and out. For example, you need to know their background. The circumstances they grew up in will influence their core values, motivations, flaws, and strengths. What kind of family did they grow up in? What kind of relationship did they have with parents or siblings? Did they have many friends? What did they do with their friends? What did they dream of doing or being when they were young? Do they still have those dreams? Have they ever been in love? Have they ever had their heart broken? \n </string>
    <string name="know_characters_p2">Think about what their personality is like. Are they the happy-go-lucky type? Or are they more reserved? Do they enjoy social interaction? Or do they prefer solitude? Do they have a temper? Is patience one of their virtues or vices? Are they selfish or selfless? Intelligent or slow? \n</string>
    <string name="know_characters_p3">If you know the answer to all of these questions for a character, then you are off to a great start! If not, then you have some work to do. Just remember that the more you know about your character, the easier it will be to write about them. \n </string>
    <string name="character_voice_sub">Character Voice</string>
    <string name="character_voice_p1">How a character speaks is important because it helps them stick in the mind of the reader. Imagine if you were to read a random passage of dialogue to someone who just finished your novel. They should be able to guess what character said it just by the style of speech they are using! This may not always be the case, but it is a good goal to strive for. A character with a unique voice will be hard to forget and will add some great flavor to your novel. \n</string>
    <string name="character_voice_p2">If you are having trouble with creating a personal voice for a character, then think about their personality and how that will affect what they say or don\'t say. An overconfident person will be more bold in their speech and may at times say things that could be offensive. On the other hand, a shy person will be very careful about what they say and will rarely, if ever, say something rude. \n</string>
    <string name="character_voice_p3">When creating a voice it can help to try certain sentence structures or perhaps specific filler words, such as,  \"like\", \"um\", \"you know\", and \"okay\". Give your character\'s voice some of these characteristics and it will go a long way in making their voice unique and recognizable. \n</string>
    <string name="avoid_stereotypes_sub">Avoid Stereotypes</string>
    <string name="avoid_stereotypes_p1">Avoid the boring, overused stereotypes because these characters are too predictable and not very fun to read about. Unless you plan on making fun of a stereotype, you should always strive to make your characters unique. \n</string>
    <string name="avoid_stereotypes_p2">A good example of a boring stereotype is the all-knowing wizard character that is so common in fantasy. If you wanted to change this character to make him more interesting, you could make him act like he is in control and always knows what to do, but in reality makes a lot of mistakes and has very limited power. Then allow this character to come to the realization that he isn\'t as useful as he once thought and watch him struggle with this harsh reality. A character like this is much more interesting to read about, and you as the writer could take his story arc in several different exciting directions! \n</string>
    <string name="avoid_stereotypes_p3">Never settle for an often used character type! Take those common characters and change their personalities, desires, weaknesses, or strengths and you will begin to see your characters become fascinating to write, and read, about! \n</string>
    <string name="growth_sub">Character Growth</string>
    <string name="growth_p1">Character growth is one of the most important elements of any novel and, if done well, can turn an average story into a great one. Who doesn\'t want that? But how do you help your characters grow and develop? Well, you need to introduce some conflict into their lives. \n </string>
    <string name="growth_p2">Your story is going to have a central conflict that will challenge and test your characters. Throughout the progression of the story you should also add additional, minor conflicts for your characters to deal with. As these conflicts are resolved one by one, each character will change in some way. Some may learn that they are capable of great feats of bravery and determination, or some may realize, to their dismay, that the conflict has brought out the worst in them. \n</string>
    <string name="growth_p3">Not every character will take the exact same path, and the result of their progression will be unique to them. This journey is really what is interesting about a story. Readers want to observe these characters go through hell and see what happens to them. They may root for some and hate others, but either way they will be engrossed in the story and that is the point. \n </string>
    <string name="introspection_sub">Reveal Characters Through Introspection</string>
    <string name="introspection_p1">Introspection is a great literary device for revealing more about a character\'s motivations and inner desires. Letting the readers in on the thoughts of a character will help them to see what your character\'s true personality is like because your character may be putting on an act in front of others in your novel. \n</string>
    <string name="introspection_p2">Moments of reflection happen in between action scenes and give the characters, as well as your readers, a moment to consider what has transpired up to that point. These moments should not drag on but don\'t be scared to spend time on them either. \n</string>
    <string name="action_sub">Reveal Characters Through Their Actions</string>
    <string name="action_p1">While introspection is a great way to share more about your characters, you don\'t want to always be examining their thoughts. Putting your characters in situations where they have to act can reveal a lot about them and can be more interesting to the reader. Do your best to SHOW the reader what a character is like instead of always telling them. \n</string>
    <string name="stay_in_character_sub">Stay in Character</string>
    <string name="stay_in_character_p1">Try to avoid complete 180\'s with your characters. What does that mean? It means that if you portray a character in a certain way throughout the whole book and then in one scene have them do something completely out of character, then there had better be a good reason for it. \n</string>
    <string name="stay_in_character_p2">Let\'s try an example. If your hero Roderick is normally a very pleasant and kind man but out of nowhere makes a nasty comment about his good friend Pilorus, then your reader will be confused. What is going on with Roderick? Is he being influenced by some evil magic? Or perhaps he is going crazy? Or maybe this isn\'t Roderick but someone impersonating him? Those would all be valid reasons for Roderick\'s behavior. \n  </string>
    <string name="stay_in_character_p3">But what if you never explained why he did what he did? This would be very jarring to your readers and could sour them on the story. Roderick the character would no longer seem authentic and neither would the story. If that happens, then you\'ve lost your readers so, do your best to stay consistent throughout the whole novel. \n</string>
    <string name="create_world_sub">A World for your Novel</string>
    <string name="create_world_p1">One of the hallmarks of a good fantasy novel is the rich description of the world where the story takes place. This is true even if the world happens to be the one that we live on. You really need to do a good job of painting the scene in the mind of the reader to make it come alive. \n</string>
    <string name="create_world_p2">The advantage a fantasy writer has is that the reader is expecting things to be strange or different. Because of this you have a lot of flexibility when it comes to worldbuilding. Let your imagination run free and create an environment that is unforgettable! At the same time you need to remember that what you create has to make sense and be consistent. Set up some rules for your world to follow and stick to them. If the air is extremely thin in an area of your world, then your characters should tire faster while there. If the belief system of a particular nation includes shunning outsiders, then that is what you need to portray in your novel. \n</string>
    <string name="our_world_sub">Novel Set in our World</string>
    <string name="our_world_p1">If your novel is going to take place in the world that we live in, then you need to make sure that you integrate fantasy elements in a clever way. It\'s not enough to just say that most tax auditors are actually demon hunters. You have to explain how they are able to hide the fact that they spend most of their time killing hell spawn throughout the country. This can create some challenges, but if you are able to pull it off then your novel will definitely be a fun read. \n</string>
    <string name="new_world_sub">Novel Set in a New World</string>
    <string name="new_world_p1">To create an entirely new world, you will need to put in a lot of work to pull it off successfully. You need to consider what the geography/landscape looks like, what types of creatures and people live there (covered in a different section in this app), what the social structure looks like (e.g. people ruled by kings or governments, different social classes like peasants, merchants, nobility etc.), whether or not there is some sort of religion or belief system, what the economy looks like, and how advanced the technology is just to name a few things. \n</string>
    <string name="new_world_p2">If you haven\'t realized it yet this means that there will be a lot of details which require your consideration. This can be a huge undertaking but a polished, interesting world will allow the reader to really immerse themselves in your story. \n</string>
    <string name="the_details_sub">The Details are Important</string>
    <string name="the_details_p1">What you don\'t want to do is create a new world but fail to provide enough detail to the reader about what it looks like or what it feels like to live there. Such a world is not convincing or captivating, and the reader will easily lose focus and struggle to orient themselves. \n</string>
    <string name="the_details_p2">On the other hand, you should refrain from providing too much detail. Fantasy fans love learning about new worlds, but remember that you are not writing an article for a scientific journal. You\'re telling a story. If you focus too much on describing what the world is like, then the pace of your novel will seem excruciatingly slow. A good strategy for avoiding this pitfall is to explain things in bits and pieces. You probably don\'t need to dedicate entire chapters to world description, so a few paragraphs every now and then will give the reader some more information to digest and help them slowly build a picture in their mind of what things look and feel like. \n</string>
    <string name="use_senses_sub">Use the Five Senses</string>
    <string name="use_senses_p1">Remember to use the five senses to clearly reveal your world. Describe the colors and textures of objects. Have one of your characters interact with different elements and describe what they are experiencing, either through dialogue or introspection. The more real you can make the world seem, the easier it will be for your reader to suspend their disbelief and really get into the story. \n</string>
</resources>