<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.glenn.howtowritefantasy.activities.TheWorldActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tb_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <!-- World for Novel -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                android:text="@string/create_world_sub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/create_world_p1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/create_world_p2"/>


            <!-- Novel in our World -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                android:text="@string/our_world_sub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/our_world_p1"/>


            <!-- Novel in New World -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                android:text="@string/new_world_sub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/new_world_p1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/new_world_p2"/>


            <!-- World Details -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                android:text="@string/the_details_sub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/the_details_p1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/the_details_p2"/>


            <!-- Use Senses -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                android:text="@string/use_senses_sub"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text"
                android:text="@string/use_senses_p1"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
